--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -46,7 +46,7 @@ sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
 
-[temperature_sensor raspberry_pi]
+[temperature_sensor thinkpad]
 sensor_type: temperature_host
 min_temp: 10
 max_temp: 100
@@ -54,11 +54,13 @@ max_temp: 100
 [printer]
 kinematics: cartesian
 max_velocity: 250
-max_accel: 2500
+max_accel: 2000
 minimum_cruise_ratio: 0.5
 square_corner_velocity: 5.0
 max_z_velocity: 100
 max_z_accel: 500
+
+[input_shaper]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -182,14 +184,14 @@ algorithm: bicubic
 [bltouch]
 sensor_pin: ^PC14
 control_pin: PC13
+x_offset: -24.0
+y_offset: -13.0
+z_offset: 1.632
+speed: 20
+pin_move_time: 0.4
 stow_on_each_sample: False
 probe_with_touch_mode: True
-x_offset: -24.0
-y_offset: -14.5
-z_offset: 1.75
-speed: 5
-samples: 3
-lift_speed: 10
+
 
 #####################################################################
 #   Fan Control
@@ -237,11 +239,11 @@ pin: PB0
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.477500, 0.202500, -0.003333, -0.145000, -0.289167
-#*# 	0.432500, 0.204167, 0.010833, -0.145000, -0.297500
-#*# 	0.427500, 0.200000, 0.020000, -0.139167, -0.304167
-#*# 	0.466667, 0.227500, 0.026667, -0.125833, -0.306667
-#*# 	0.490000, 0.243333, 0.041667, -0.114167, -0.260833
+#*# 	  0.462500, 0.196667, -0.011667, -0.147500, -0.315000
+#*# 	  0.392500, 0.170000, -0.017500, -0.163333, -0.319167
+#*# 	  0.400000, 0.181667, -0.009167, -0.160000, -0.343333
+#*# 	  0.427500, 0.195000, -0.018333, -0.165833, -0.334167
+#*# 	  0.460000, 0.202500, 0.005000, -0.147500, -0.296667
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -254,4 +256,4 @@ pin: PB0
 #*# max_y = 210.48
 #*#
 #*# [bltouch]
-#*# z_offset = 1.750
+#*# z_offset = 1.632
