--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -187,7 +187,8 @@ control_pin: PC13
 x_offset: -24.0
 y_offset: -13.0
 z_offset: 1.632
-speed: 20
+speed: 15
+samples: 2
 pin_move_time: 0.4
 stow_on_each_sample: False
 probe_with_touch_mode: True
